Bump to Java 25 and Spring Boot 3.5